2003-06-16  Donovan Preston  <dp@twistedmatrix.com>

	* twisted/web/woven/{controller,view,widgets}.py: Cleaned up the
	output of Woven so it never leaves any woven-specific attributes
	on the output HTML. Also, id attributes are not set on every
	node with a View unless you are using LivePage.

2003-06-11  Brian Warner  <warner@lothar.com>

	* doc/howto/cvs-dev.html: add "Working from CVS" hints

2003-06-10  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/protocol.py: connection refused errors for
	connected datagram protocols (connectUDP) are indicated using
	callback, ConnectedDatagramProtocol.connectionRefused, rather
	than an exception as before.

2003-06-09  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/trial/{unittest,runner}.py: Added setUpClass and
	tearDownClass methods and invocations to twisted.trial. Implement
	those methods in your TestCases if you want to manage resources on
	a per-class level.
 
2003-06-09  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/mail/relay.py: Default relaying rule change from all
	local and all non-INET connections to all local and all UNIX
	connections.

2003-06-08  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/interfaces.py: Added ITLSTransport interface,
	subclassing ITCPTransport and adding one method - startTLS()

	* twisted/internet/tcp.py: Connector class made to implement
	ITLSTransport if TLS is available.

2003-06-05  Brian Warner  <warner@lothar.com>

	* twisted/conch/ssh/transport.py (ssh_KEX_DH_GEX_INIT): don't use
	small values for DH parameter 'y'. openssh rejects these because they
	make it trivial to reconstruct the shared secret. This caused a test
	failure about 1024 times out of every 65536.

	* twisted/test/test_dirdbm.py (DirDbmTestCase.testModificationTime):
	dodge a kernel bug that lets mtime get skewed from time(), causing
	an occasional test failure

2003-06-03  Jp Calderone    <exarkun@twistedmatrix.com>
